# dig-pretty

./: =23.2.1  LICENSE  README.md  dig-pretty.py  dig_pretty.py  pyproject.toml
